<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="ovh.vicart.ideas.viewmodels.MainViewModel" />
        <import type="android.view.View"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/main_bottom_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_ideas"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:text="@string/no_ideas_yet"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:visibility="@{vm.ideas.size() == 0 ? View.VISIBLE : View.INVISIBLE}"
                    app:drawableTopCompat="@drawable/ic_outline_lightbulb_24" />

                <TableLayout
                    android:id="@+id/main_table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TableLayout>
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="addIdea"
            android:src="@drawable/ic_baseline_add_24"/>

        <LinearLayout
            android:id="@+id/main_bottom_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="6dp"
            android:visibility="@{vm.connected ? View.GONE : View.VISIBLE}">

            <ovh.vicart.ideas.views.StatusView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/Theme.Ideas.Widget.StatusView" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/not_online"
                android:layout_weight="1"
                android:layout_marginLeft="6dp"/>

            <Button
                android:id="@+id/main_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                style="@style/Theme.Ideas.Button.TextButton.Dense" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>